feat: layout with footer

--- a/index.html
+++ b/index.html
@@ -70,13 +70,42 @@
                 </article>
                 <a class="slider__control slider__control_right slider__control_show" href="#" role="button"></a>
             </div>
+            <article class="text-form-block">
+                <p>Get notified about new amazing articles</p>
+                <div class="form-block">
+                    <input placeholder="Email" type="text">
+                    <button>send</button>
+                </div>
+            </article>
         </div>
     </main>
 
-
-
-    <footer>
-        footer
+    <footer class="footer">
+        <div class="content">
+            <div class="footer-inner">
+                <div class="logo-block">
+                    <img src="./images/path0.png" alt="logo">
+                    <h4>wildfile</h4>
+                </div>
+                <nav class="footer-nav">
+                    <ul>
+                        <li>articles</li>
+                        <li>about us</li>
+                        <li>learn more</li>
+                    </ul>
+                </nav>
+                <div class="social-icons">
+                    <a href="https://www.facebook.com/gena.burhanov/">
+                        <img src="/images/Frame.png" alt="facebook"></a>
+                    <a href="https://www.instagram.com/burhanovgd/">
+                        <img src="/images/Frame_(1).png" alt="facebook"></a>
+                    <a href="https://www.pinterest.ru/">
+                        <img src="/images/Frame_(2).png" alt="facebook"></a>
+                    <a href="https://web.telegram.org/">
+                        <img src="/images/Frame_(3).png" alt="facebook"></a>
+                </div>
+            </div>
+        </div>
     </footer>
     <script src="/js/slider.js"></script>
 </body>
