feat: add description for slides

--- a/index.html
+++ b/index.html
@@ -49,21 +49,45 @@
                 <article class="slider">
                     <div class="slider__wrapper">
                         <div class="slider__item">
+                            <div class="slider__item_descrip">
+                                <h4>deer</h4>
+                                <p>naturalist investigation</p>
+                            </div>
                             <img src="./images/Rectangle_(0).jpg" alt="">
                         </div>
                         <div class="slider__item">
+                            <div class="slider__item_descrip">
+                                <h4>squirrel</h4>
+                                <p>kamikaze squirrels</p>
+                            </div>
                             <img src="./images/Rectangle_(1).jpg" alt="">
                         </div>
                         <div class="slider__item">
+                            <div class="slider__item_descrip">
+                                <h4>bird</h4>
+                                <p>birds Fight club</p>
+                            </div>
                             <img src="./images/Rectangle_(2).jpg" alt="">
                         </div>
                         <div class="slider__item">
+                            <div class="slider__item_descrip">
+                                <h4>deer</h4>
+                                <p>naturalist investigation</p>
+                            </div>
                             <img src="./images/Rectangle_(0).jpg" alt="">
                         </div>
                         <div class="slider__item">
+                            <div class="slider__item_descrip">
+                                <h4>squirrel</h4>
+                                <p>kamikaze squirrels</p>
+                            </div>
                             <img src="./images/Rectangle_(1).jpg" alt="">
                         </div>
                         <div class="slider__item">
+                            <div class="slider__item_descrip">
+                                <h4>bird</h4>
+                                <p>birds Fight club</p>
+                            </div>
                             <img src="./images/Rectangle_(2).jpg" alt="">
                         </div>
                     </div>
