feat: add links for footer nav menu

--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
                 </div>
                 <nav class="footer-nav">
                     <ul>
-                        <li>articles</li>
-                        <li>about us</li>
-                        <li>learn more</li>
+                        <li><a href="#">articles</a></li>
+                        <li><a href="#">about us</a> </li>
+                        <li><a href="#">learn more</a> </li>
                     </ul>
                 </nav>
                 <div class="social-icons">
