refactor: move info block to main

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 
 <body class="wrapper">
 
-
     <header class="header">
-        <div class="content">
+        <div class="content header-content">
             <section class="first-line">
                 <div class="logo-block">
                     <img src="./images/path0.png" alt="logo">
@@ -28,80 +27,88 @@
                     </ui>
                 </nav>
             </section>
-            <section class="info-section">
-                <h1>survival</h1>
-                <p>What this means is that we exist to help protect our environment and do in numbers of ways. You can
-                    save the planet by donation.
-                </p>
-                <button>donate</button>
-            </section>
+
         </div>
     </header>
 
-    <main class="main">
-        <div class="content">
-            <article class="main-info">
-                <h2>Latest articles</h2>
-                <p>Breaking news from the wild</p>
-            </article>
-            <div class="slider-block">
-                <a class="slider__control slider__control_left slider__control_show" href="#" role="button"></a>
-                <article class="slider">
-                    <div class="slider__wrapper">
-                        <div class="slider__item">
-                            <div class="slider__item_descrip">
-                                <h4>deer</h4>
-                                <p>naturalist investigation</p>
-                            </div>
-                            <img src="./images/Rectangle_(0).jpg" alt="">
-                        </div>
-                        <div class="slider__item">
-                            <div class="slider__item_descrip">
-                                <h4>squirrel</h4>
-                                <p>kamikaze squirrels</p>
-                            </div>
-                            <img src="./images/Rectangle_(1).jpg" alt="">
-                        </div>
-                        <div class="slider__item">
-                            <div class="slider__item_descrip">
-                                <h4>bird</h4>
-                                <p>birds Fight club</p>
-                            </div>
-                            <img src="./images/Rectangle_(2).jpg" alt="">
-                        </div>
-                        <div class="slider__item">
-                            <div class="slider__item_descrip">
-                                <h4>deer</h4>
-                                <p>naturalist investigation</p>
-                            </div>
-                            <img src="./images/Rectangle_(0).jpg" alt="">
-                        </div>
-                        <div class="slider__item">
-                            <div class="slider__item_descrip">
-                                <h4>squirrel</h4>
-                                <p>kamikaze squirrels</p>
-                            </div>
-                            <img src="./images/Rectangle_(1).jpg" alt="">
-                        </div>
-                        <div class="slider__item">
-                            <div class="slider__item_descrip">
-                                <h4>bird</h4>
-                                <p>birds Fight club</p>
-                            </div>
-                            <img src="./images/Rectangle_(2).jpg" alt="">
-                        </div>
-                    </div>
-                </article>
-                <a class="slider__control slider__control_right slider__control_show" href="#" role="button"></a>
+    <main>
+        <article class="main-greeting">
+            <div class="content">
+                <section class="info-section">
+                    <h1>survival</h1>
+                    <p>What this means is that we exist to help protect our environment and do in numbers of ways. You
+                        can
+                        save the planet by donation.
+                    </p>
+                    <button>donate</button>
+                </section>
             </div>
-            <article class="text-form-block">
-                <p>Get notified about new amazing articles</p>
-                <div class="form-block">
-                    <input placeholder="Email" type="text">
-                    <button>send</button>
+        </article>
+        <article class="main">
+            <div class="content">
+                <section class="main-info">
+                    <h2>Latest articles</h2>
+                    <p>Breaking news from the wild</p>
+                </section>
+                <div class="slider-block">
+                    <a class="slider__control slider__control_left slider__control_show" href="#" role="button"></a>
+                    <article class="slider">
+                        <div class="slider__wrapper">
+                            <div class="slider__item">
+                                <div class="slider__item_descrip">
+                                    <h4>deer</h4>
+                                    <p>naturalist investigation</p>
+                                </div>
+                                <img src="./images/Rectangle_(0).jpg" alt="">
+                            </div>
+                            <div class="slider__item">
+                                <div class="slider__item_descrip">
+                                    <h4>squirrel</h4>
+                                    <p>kamikaze squirrels</p>
+                                </div>
+                                <img src="./images/Rectangle_(1).jpg" alt="">
+                            </div>
+                            <div class="slider__item">
+                                <div class="slider__item_descrip">
+                                    <h4>bird</h4>
+                                    <p>birds Fight club</p>
+                                </div>
+                                <img src="./images/Rectangle_(2).jpg" alt="">
+                            </div>
+                            <div class="slider__item">
+                                <div class="slider__item_descrip">
+                                    <h4>deer</h4>
+                                    <p>naturalist investigation</p>
+                                </div>
+                                <img src="./images/Rectangle_(0).jpg" alt="">
+                            </div>
+                            <div class="slider__item">
+                                <div class="slider__item_descrip">
+                                    <h4>squirrel</h4>
+                                    <p>kamikaze squirrels</p>
+                                </div>
+                                <img src="./images/Rectangle_(1).jpg" alt="">
+                            </div>
+                            <div class="slider__item">
+                                <div class="slider__item_descrip">
+                                    <h4>bird</h4>
+                                    <p>birds Fight club</p>
+                                </div>
+                                <img src="./images/Rectangle_(2).jpg" alt="">
+                            </div>
+                        </div>
+                    </article>
+                    <a class="slider__control slider__control_right slider__control_show" href="#" role="button"></a>
                 </div>
-            </article>
-        </div>
+                <section class="text-form-block">
+                    <p>Get notified about new amazing articles</p>
+                    <div class="form-block">
+                        <input placeholder="Email" type="text">
+                        <button>send</button>
+                    </div>
+                </section>
+            </div>
+        </article>
     </main>
 
     <footer class="footer">
