refactor: change button to input submit

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <section class="first-line">
                 <div class="logo-block">
                     <img src="./images/path0.png" alt="logo">
-                    <h4>wildfile</h4>
+                    <h1>wildfile</h1>
                 </div>
                 <nav>
                     <ui class="navigation-list">
                         <li><a href="#">blog</a></li>
                         <li><a href="#">contacts</a></li>
-                        <li><a href="#"></a><img src="./images/Vector.png" alt=""></li>
+                        <li><a href="#"></a><img src="./images/Vector.png" alt="search-icon"></li>
                         <li><button class="sign-in-button">sign in</button></li>
                     </ui>
                 </nav>
@@ -31,7 +31,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="main">
         <article class="main-greeting">
             <div class="content">
                 <section class="info-section">
@@ -44,7 +44,7 @@
                 </section>
             </div>
         </article>
-        <article class="main">
+        <article class="latest-article">
             <div class="content">
                 <section class="main-info">
                     <h2>Latest articles</h2>
@@ -103,8 +103,8 @@
                 <section class="text-form-block">
                     <p>Get notified about new amazing articles</p>
                     <div class="form-block">
-                        <input placeholder="Email" type="text">
-                        <button>send</button>
+                        <input class="email" placeholder="Email" type="text">
+                        <input class="submit-button" type="submit" value="send"></input>
                     </div>
                 </section>
             </div>
