feat: finish layout

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>CV</title>
     <link rel="stylesheet" href="./styles/index.css">
     <link rel="stylesheet" href="./styles/slider.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
+    </style>
 
 </head>
 
@@ -16,14 +19,14 @@
             <section class="first-line">
                 <div class="logo-block">
                     <img src="./images/path0.png" alt="logo">
-                    <h1>wildfile</h1>
+                    <h1>wildlife</h1>
                 </div>
                 <nav>
                     <ui class="navigation-list">
                         <li><a href="#">blog</a></li>
                         <li><a href="#">contacts</a></li>
                         <li><a href="#"></a><img src="./images/Vector.png" alt="search-icon"></li>
-                        <li><button class="sign-in-button">sign in</button></li>
+                        <li><button class="sign-in-button">Sign in</button></li>
                     </ui>
                 </nav>
             </section>
@@ -57,42 +60,42 @@
                             <div class="slider__item">
                                 <div class="slider__item_descrip">
                                     <h4>deer</h4>
-                                    <p>naturalist investigation</p>
+                                    <p>Naturalist investigation</p>
                                 </div>
                                 <img src="./images/Rectangle_(0).jpg" alt="">
                             </div>
                             <div class="slider__item">
                                 <div class="slider__item_descrip">
                                     <h4>squirrel</h4>
-                                    <p>kamikaze squirrels</p>
+                                    <p>Kamikaze squirrels</p>
                                 </div>
                                 <img src="./images/Rectangle_(1).jpg" alt="">
                             </div>
                             <div class="slider__item">
                                 <div class="slider__item_descrip">
                                     <h4>bird</h4>
-                                    <p>birds Fight club</p>
+                                    <p>Birds Fight club</p>
                                 </div>
                                 <img src="./images/Rectangle_(2).jpg" alt="">
                             </div>
                             <div class="slider__item">
                                 <div class="slider__item_descrip">
                                     <h4>deer</h4>
-                                    <p>naturalist investigation</p>
+                                    <p>Naturalist investigation</p>
                                 </div>
                                 <img src="./images/Rectangle_(0).jpg" alt="">
                             </div>
                             <div class="slider__item">
                                 <div class="slider__item_descrip">
                                     <h4>squirrel</h4>
-                                    <p>kamikaze squirrels</p>
+                                    <p>Kamikaze squirrels</p>
                                 </div>
                                 <img src="./images/Rectangle_(1).jpg" alt="">
                             </div>
                             <div class="slider__item">
                                 <div class="slider__item_descrip">
                                     <h4>bird</h4>
-                                    <p>birds Fight club</p>
+                                    <p>Birds Fight club</p>
                                 </div>
                                 <img src="./images/Rectangle_(2).jpg" alt="">
                             </div>
@@ -116,13 +119,13 @@
             <div class="footer-inner">
                 <div class="logo-block">
                     <img src="./images/path0.png" alt="logo">
-                    <h4>wildfile</h4>
+                    <h1>wildlife</h1>
                 </div>
                 <nav class="footer-nav">
                     <ul>
-                        <li><a href="#">articles</a></li>
-                        <li><a href="#">about us</a> </li>
-                        <li><a href="#">learn more</a> </li>
+                        <li><a href="#">Articles</a></li>
+                        <li><a href="#">About us</a> </li>
+                        <li><a href="#">Learn more</a> </li>
                     </ul>
                 </nav>
                 <div class="social-icons">
